Major: rimosso CGI
Rimosso programma CGI ed i relativi riferimenti

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,9 @@
 services:
   httpd:
-    image: httpd-cgid
-    build: .
-    container_name: apache-homework1
+    image: php:8.3-apache-bookworm
+    container_name: apache-homework2
     volumes:
-      #- ./config/httpd.conf:/usr/local/apache2/conf/httpd.conf:ro
       - ./html:/usr/local/apache2/htdocs
-      - ./cgi-bin:/usr/local/apache2/cgi-bin
 
     ports:
       - 8080:80
