Aggiunta configurazione db
Aggiunta configurazione di sviluppo per db (MariaDB) e pannello di controllo (PHPMyAdmin)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,21 @@
 services:
   httpd:
-    image: php:8.3-apache-bookworm
-    container_name: apache-homework2
+    image: php-mysqli
+    build: .
+    container_name: homework2-apache
     volumes:
       - ./html:/var/www/html
-
     ports:
       - 8080:80
+
+  db:
+    image: mariadb:11.3
+    container_name: homework2-mariadb
+    env_file: .env
+
+  db-admin:
+    image: phpmyadmin:5
+    container_name: homework2-phpmyadmin
+    env_file: .env
+    ports:
+      - 8081:80
